# dw-docs

./: .gitignore  .gitpod.yml  README.md  app.py  main.py  mkdocs.yml  pyproject.toml
pages/: index.md
pages/Regras de Negócio/: index.md
pages/stylesheets/: extra.css
pages/tabelas/: index.md
pages/views/: index.md
site/: 404.html  index.html
site/Regras de Negócio/: index.html
site/search/: search_index.json
site/views/: index.html
src/: app.py  backend.py
src/database/: __init__.py  controller.py  db.py
src/views/: update_docs.py  view_and_select_data.py
tabelas/: index.html
