[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["ViniPmartins <vinicius.pereira.mts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
mkdocs-macros-plugin = "^1.0.5"
pandas = "^2.2.2"
tabulate = "^0.9.0"
loguru = "^0.7.2"
openpyxl = "^3.1.5"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
